[package]
name = "grogu"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["foolish-dev"]
description = "Sync a Tokyo Night / Catppuccin / Dracula theme across Noctalia shell, niri, telia, vim, kitty, ghostty, and tmux — triggered by Noctalia's wallpaper change"
repository = "https://github.com/foolish-dev/grogu"

[[bin]]
name = "grogu"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
palette = "0.7"
kmeans_colors = "0.7"
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
